# game_of_life

./: .gitignore  Dockerfile  README.rst  config.copy.yaml  main.py  pyproject.toml  test_game_of_life.py
game_of_life/: config.py  exceptions.py  utils.py
game_of_life/models/: __init__.py  cell.py  cell_event.py  generation.py  grid.py  life_game.py
game_of_life/ui/: __init__.py  grid_drawer.py
tests/: __init__.py  test_game_of_life.py
