[tool.poetry]
name = "game_of_life"
version = "0.1.0"
description = ""
authors = ["vodkar <boombarah@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Inject = "^4.3.1"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
black = "^21.8b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
